# ucac4_to_index

./: .autotools  .cproject  .project  NEWS  README  configure  configure.ac  configure.scan
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
release/: sigma_100-mag10.txt  sigma_100-mag9.txt  sigma_220-mag9.txt
src/: ACatalog.h  ADefine.h  AMath.cpp  AMath.h  ATimeSpace.cpp  ATimeSpace.h  FITSHandler.hpp  Makefile.am  Makefile.in  ParamCoordMatch.h  ParamCoorsMatch.h  Projection.cpp  Projection.h  ucac4_to_index.cpp
